# CAP4

./: .gitignore  1.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Makefile  RUN_WEBSOCKET_BRIDGE.md  SOLUTION.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  USAGE.md  debug_simple.py  pyproject.toml  restart_audio_bridge.sh  run_audio_bridge.py  setup_audio_pipes.sh  start_ai_bridge.sh  start_baresip.sh  start_baresip_with_aubridge.sh  start_baresip_with_pipes.sh  start_full_system.sh  start_system.sh  stop_all.sh
config/: baresip_pipe_config
config/baresip/: accounts  config  config_minimal  contacts
docs/: SIP.md
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routers/: calls.py
src/core/: __init__.py  config.py  di.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  elevenlabs_client.py
src/infrastructure/audio/: __init__.py  audio_bridge.py  audio_bridge_websocket.py  audio_transport.py  audio_types.py
src/infrastructure/di/: __init__.py  config_provider.py  infrastructure_provider.py  repository_provider.py  service_provider.py
src/infrastructure/telephony/: __init__.py  baresip_controller.py
src/models/: __init__.py  call.py  call_status.py
src/repositories/: __init__.py  call_repository.py
src/services/: __init__.py  baresip_event_monitor.py  call_monitor.py  call_service.py  simple_call_monitor.py  sip_call_monitor.py
